# aiven-semantic-search

./: .gitignore  README.md  SECURITY.md
part-1/: .env.example  README.md  pyproject.toml  requirements.txt
part-1/src/aiven_semantic_search/: __main__.py  catalog.py  cli.py  config.py  gemini_embedder.py  opensearch_client.py
