[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiven-semantic-search-part-1"
version = "0.1.0"
description = "Part 1: semantic search demo using Aiven for OpenSearch + Gemini embeddings (Vertex AI)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

